assignment going on

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlowerShop</title>
+    <!-- for google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Lato:wght@300;400;700;900&family=Open+Sans:wght@400;500;700;800&display=swap"
+        rel="stylesheet">
+    <!-- for google fonts -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="head-section">
+            <div class="head-section-left">
+                <h1 class="first-caption">Beautiful things don’t have to ask for attention.</h1>
+                <p class="first-description">Flowers are a sign of new beginnings. After a cold and snowy winter, the
+                    arrival of flowers serves as
+                    a message that spring is near—and delightful, warmer weather is ahead!
+                </p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <div class="head-section-right">
+                <img src="Asset/pngwing 6.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
+
 </html>
