--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <header>
+        <!-- Start heading section -->
         <div class="head-section">
             <div class="head-section-left">
                 <h1 class="first-caption">Beautiful things don’t have to ask for attention.</h1>
@@ -30,6 +31,7 @@
                 <img src="Asset/pngwing 6.png" alt="">
             </div>
         </div>
+        <!-- End of heading section -->
     </header>
     <main></main>
     <footer></footer>
