updated few sections

--- a/index.html
+++ b/index.html
@@ -28,12 +28,52 @@
                 <button class="btn-primary">Shop Now</button>
             </div>
             <div class="head-section-right">
-                <img src="Asset/pngwing 6.png" alt="">
+                <img src="Asset/pngwing 10.png" alt="">
             </div>
         </div>
         <!-- End of heading section -->
     </header>
-    <main></main>
+    <main>
+        <!-- start of featured section -->
+        <div class="featured-items">
+            <div class="featured-header">
+                <h1 class="featured-head-tag">Our Featured Flowers</h1>
+                <p class="featured-paragraph">A flower does not think of competing with the flower next to it. It just blooms.If I had a flower for every time I thought of you, I could walk in my garden forever.</p>
+            </div>
+            <div class="featured-images">
+                <div class="image-box">
+                    <img src="Asset/pngwing 6.png" alt="">
+                    <figcaption>Pink Flower Tree</figcaption>
+                </div>
+                <div class="image-box second">
+                    <img src="Asset/pngwing 5.png" alt="">
+                    <figcaption>Pink Flower Tree</figcaption>
+                </div>
+                <div class="image-box third">
+                    <img src="Asset/pngwing 7.png" alt="">
+                    <figcaption>Pink Flower Tree</figcaption>
+                </div>
+            </div>
+        </div>
+        <!-- End of featured section -->
+
+        <!-- Start of service section -->
+        <div class="service-category">
+            <div>
+                <img src="Asset/Group 57.png" alt="">
+                <h5>Same Day Delivery</h5>
+            </div>
+            <div>
+                <img src="Asset/Group 58.png" alt="">
+                <h5>Fresh Flowers. Local Growers.</h5>
+            </div>
+            <div>
+                <img src="Asset/Group 59.png" alt="">
+                <h5>24/7 Free Support.</h5>
+            </div>
+        </div>
+        <!-- end of service section -->
+    </main>
     <footer></footer>
 </body>
 
