updated up to instagram section

--- a/index.html
+++ b/index.html
@@ -59,20 +59,62 @@
 
         <!-- Start of service section -->
         <div class="service-category">
-            <div>
+            <div class="category">
                 <img src="Asset/Group 57.png" alt="">
                 <h5>Same Day Delivery</h5>
             </div>
-            <div>
+            <div class="category">
                 <img src="Asset/Group 58.png" alt="">
                 <h5>Fresh Flowers. Local Growers.</h5>
             </div>
-            <div>
+            <div class="category">
                 <img src="Asset/Group 59.png" alt="">
                 <h5>24/7 Free Support.</h5>
             </div>
         </div>
         <!-- end of service section -->
+
+        <!-- start of hot deal section -->
+        <div class="hot-deal">
+            <div class="offer-section-left">
+                <h1 class="hot-offer-caption">Hot Weekend Deal!! Sale Up To <span class="higlighter">25% Off</span></h1>
+                <p>Where flowers bloom, so does hope.In an endless garden of flowers, I will always pick you.</p>
+                <button class="btn-primary">Sign up</button>
+            </div>
+
+            <div class="offer-section-right">
+                <img src="Asset/pngwing 8.png" alt="">
+            </div>
+        </div>
+
+        <!-- end of hot deal section -->
+
+        <!-- start of instagram section -->
+
+        <div class="instagram-post">
+            <div class="insta-header">
+                <h1 class="insta-title">Instagram</h1>
+                <p class="insta-desc">A flower does not think of competing with the flower next to it. It just blooms.If I had a flower for every time I thought of you, I could walk in my garden forever.</p>
+            </div>
+
+            <div class="insta-images">
+                <div>
+                    <img src="Asset/Flower 01.png" alt="">
+                </div>
+                <div>
+                    <img src="Asset/Rectangle 4.png" alt="">
+                </div>
+                <div>
+                    <img src="Asset/Rectangle 5.png" alt="">
+                </div>
+                <div>
+                    <img src="Asset/Rectangle 6.png " alt="">
+                </div>
+            </div>
+        </div>
+
+        <!-- end of instagram section -->
+
     </main>
     <footer></footer>
 </body>
