updated with all items

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="featured-items">
             <div class="featured-header">
                 <h1 class="featured-head-tag">Our Featured Flowers</h1>
-                <p class="featured-paragraph">A flower does not think of competing with the flower next to it. It just blooms.If I had a flower for every time I thought of you, I could walk in my garden forever.</p>
+                <p class="featured-paragraph">A flower does not think of competing with the flower next to it. It just
+                    blooms.If I had a flower for every time I thought of you, I could walk in my garden forever.</p>
             </div>
             <div class="featured-images">
                 <div class="image-box">
@@ -94,7 +95,8 @@
         <div class="instagram-post">
             <div class="insta-header">
                 <h1 class="insta-title">Instagram</h1>
-                <p class="insta-desc">A flower does not think of competing with the flower next to it. It just blooms.If I had a flower for every time I thought of you, I could walk in my garden forever.</p>
+                <p class="insta-desc">A flower does not think of competing with the flower next to it. It just blooms.If
+                    I had a flower for every time I thought of you, I could walk in my garden forever.</p>
             </div>
 
             <div class="insta-images">
@@ -115,8 +117,31 @@
 
         <!-- end of instagram section -->
 
+        <div class="subscription-section">
+            <div>
+                <h1 class="subscribe-title">Subscribe & Get the Latest Offers</h1>
+                <p class="subscribe-desc">$30 coupon for first shopping</p>
+                <div class="email-section">
+                    <form action="">
+                        <input type="email" placeholder="Enter your email">
+                    </form>
+                    <div>
+                        <button class="btn-primary">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <h1 class="footer-caption"><span class="higlighter">Flower</span>Shop</h1>
+            <p class="footer-desc">the
+                arrival of flowers serves as
+                a message that spring is near—and delightful, warmer weather is ahead!</p>
+            <p style="color: grey;">&copy; Flowershop.com | All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
