Assignment almost finished

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlowerShop</title>
+    <link rel="icon" type="image/x-icon" href="Asset/bouquet.png">
     <!-- for google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +18,19 @@
 
 <body>
     <header>
+        <nav class="menubar">
+            <div>
+                <h3><span class="higlighter">Flower</span>Shop</h3>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <input class="search-btn" type="search" placeholder="search here" name="" id="">
+                </ul>
+            </div>
+        </nav>
         <!-- Start heading section -->
         <div class="head-section">
             <div class="head-section-left">
